@@ -1,8 +1,0 @@
-django==3.2.4
-channels==3.0.3
-channels-redis==3.2.0
-pytest==6.2.4
-pytest-xdist==2.3.0
-coverage==5.5
-pytest-cov==2.12.1
-wheel==0.36.2
