@@ -1,3 +1,0 @@
-if __name__ == '__main__':
-    print('engine stack')
-
