@@ -1,0 +1,3 @@
+def execute_from_command_line():
+    print('executing from command line')
+
