@@ -16,3 +16,14 @@ classifiers =
     Operating System :: POSIX :: Linux
     Operating System :: MacOS
     Programming Language :: Python :: 3 :: Only
+
+[options]
+packages = find:
+python_requires = >= 3.3
+install_requires =
+    django==3.2.4
+    channels==3.0.3
+    channels-redis==3.2.0
+[options.entry_points]
+console_scripts =
+    enginestack-admin = enginestack.management:execute_from_command_line
